--- a/GlobalDifficultyByCompany/GlobalDifficultyByCompany/GlobalDifficultyByCompany.csproj
+++ b/GlobalDifficultyByCompany/GlobalDifficultyByCompany/GlobalDifficultyByCompany.csproj
@@ -72,6 +72,9 @@
     <Content Include="Assets\README.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(TargetDir)$(TargetFileName)" "$(BattleTechGame)\Mods\GlobalDifficultyByCompany" /y</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
