--- a/GlobalDifficultyByCompany/GlobalDifficultyByCompany/Assets/settings.json
+++ b/GlobalDifficultyByCompany/GlobalDifficultyByCompany/Assets/settings.json
@@ -1,5 +1,5 @@
 {
-  "CostPerHalfSkull": 10000000,
+  "CostPerHalfSkull": 14000000,
   "NumberOfMechsCounted": 4,
-  "DropSkullsPerCost": true
+  "Mode": 2
 }
